# whoopsync

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  auth.db  init_delete_later.md  pyproject.toml  refresh_tokens.py  run_api_server.py  run_auth_server.py  run_daemon.py  run_token_refresher.py  setup.sh  whoop.db  whoop_openapi.json
tests/: __init__.py  test_data_manager.py
whoopsync/: __init__.py  __main__.py  auth_server.py  cli.py  sync_daemon.py
whoopsync/api/: __init__.py  app.py  auth_server.py  routes.py  token_client.py  token_refresher.py  whoop_api.py  whoop_api_integration.py
whoopsync/auth/: __init__.py  token_manager.py
whoopsync/data/: __init__.py  auth_manager.py  data_manager.py  models.py
whoopsync/frontend/authorize/: auhtorize.html  success.html
